Display associated collections on show pages

--- a/app/views/product_descriptions/show.html.erb
+++ b/app/views/product_descriptions/show.html.erb
@@ -5,5 +5,15 @@
 </div>
 
   <!-- Show Page Customization starts -->
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "product_descriptions/product_description_items_for_sales" %>
+  </div>
+</div>
 
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "product_descriptions/product_description_user_messagings" %>
+  </div>
+</div>
   <!-- Show Page Customization end -->
