--- a/app/views/user_data/show.html.erb
+++ b/app/views/user_data/show.html.erb
@@ -5,5 +5,15 @@
 </div>
 
   <!-- Show Page Customization starts -->
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "user_data/user_datum_seller_id" %>
+  </div>
+</div>
 
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "user_data/user_datum_user_messagings" %>
+  </div>
+</div>
   <!-- Show Page Customization end -->
