--- a/app/views/user_messagings/_form.html.erb
+++ b/app/views/user_messagings/_form.html.erb
@@ -94,7 +94,7 @@
 
     <%= f.label :product_id %>
     <!-- Input for product_id start -->
-    <%= f.number_field :product_id, class: product_class, placeholder: "Enter product" %>
+    <%= f.collection_select :product_id, ProductDescription.all, :id, :to_s, {}, class: "form-control" %>
     <!-- Input for product_id end -->
     <% if product_was_invalid %>
       <% user_messaging.errors.full_messages_for(:product).each do |message| %>
