Replace foreign key text inputs in user_messagings with dropdowns

--- a/app/views/product_descriptions/_product_description_user_messagings_new_form.html.erb
+++ b/app/views/product_descriptions/_product_description_user_messagings_new_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.label :recipient_id %>
 
     <!-- Input for recipient_id start -->
-    <%= f.text_field :recipient_id, class: "form-control" %>
+    <%= f.collection_select :recipient_id, UserDatum.all, :id, :to_s, {}, class: "form-control" %>
     <!-- Input for recipient_id end -->
   </div>
   <!-- Label and input for recipient_id end -->
