Add forms for new collection objects on show pages

--- a/app/views/product_descriptions/_product_description_items_for_sales.html.erb
+++ b/app/views/product_descriptions/_product_description_items_for_sales.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="product_description_items_for_sales_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "product_descriptions/product_description_items_for_sales_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
