--- a/app/views/product_descriptions/_product_description_user_messagings.html.erb
+++ b/app/views/product_descriptions/_product_description_user_messagings.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="product_description_user_messagings_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "product_descriptions/product_description_user_messagings_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
